syntax = "proto3";

option java_package = "com.neaniesoft.warami.data";
option java_multiple_files = true;

message InstanceSettings {
  string instance_name = 1;
  string instance_base_url = 2;
}
